set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/test_primitives)

set(testprimbin "")

macro(add_test_primitive source_name)
    add_executable(${source_name} ${source_name}.cpp ../benchmark/utils.cpp)
    target_link_libraries(${source_name} Boost::system Boost::program_options nlohmann_json::nlohmann_json GraphDB Threads::Threads NTL GMP EMPTool)
    list(APPEND testprimbin ${source_name})
endmacro()

add_test_primitive(equality)
add_test_primitive(shuffle)
add_test_primitive(mult)
add_test_primitive(compaction)
add_test_primitive(compaction_parallel)
add_test_primitive(groupindex)
add_test_primitive(groupindex_parallel)
add_test_primitive(grouppropagate)
add_test_primitive(grouppropagate_parallel)
add_test_primitive(reconstruction)
add_test_primitive(vector_reconstruction)
add_test_primitive(sort)
add_test_primitive(rewire)
add_test_primitive(delete_wires)
add_test_primitive(propagate)
add_test_primitive(gather)

add_custom_target(test_primitives)
add_dependencies(test_primitives ${testprimbin})
